fomatando classes e adicionando api-docs.json
