# app/Models/User.php
@@ -41,7 +41,8 @@ class User extends Authenticatable
         'email_verified_at' => 'datetime',
     ];
 
-    public function accounts() {
+    public function accounts()
+    {
         return $this->hasMany(Account::class);
     }
 }
